--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 BeautifulSoup==3.1.0.1
 Django==1.2.1
 Fabric==0.9.1
+MySQL-python==1.2.3
 PIL==1.1.7
 django-extensions==0.5
 -e git+http://github.com/facebook/python-sdk.git#egg=facebook
 html5lib==0.90
 pisa==3.0.33
+python-memcached==1.45
 pycrypto==2.2
 reportlab==2.4
 wsgiref==0.1.2
