--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Fabric==0.9.1
 MySQL-python==1.2.3
 PIL==1.1.7
 django-extensions==0.5
+django-tagging==0.3.1
 -e git+http://github.com/facebook/python-sdk.git#egg=facebook
 html5lib==0.90
 pisa==3.0.33
