--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ PIL==1.1.7
 boto==2.0b1
 django-tagging==0.3.1
 easy-thumbnails==1.0-alpha-8
+-e git+http://github.com/django-extensions/django-extensions.git#egg=django_extensions
 -e hg+http://code.welldev.org/django-storages/@3602d345b998#egg=django-storages
 -e git+http://github.com/facebook/python-sdk.git#egg=facebook
 html5lib==0.90
