now ignoring dynamic attributes set in Guest and Event instances

--- a/hooks/pylint.ini
+++ b/hooks/pylint.ini
@@ -151,7 +151,7 @@ ignore-mixin-members=yes
 
 # List of classes names for which member attributes should not be checked
 # (useful for classes with attributes dynamically set).
-ignored-classes=SQLObject
+ignored-classes=SQLObject,Event,Guest
 
 # When zope mode is activated, add a predefined set of Zope acquired attributes
 # to generated-members.
@@ -159,7 +159,7 @@ zope=no
 
 # List of members which are set dynamically and missed by pylint inference
 # system, and so shouldn't trigger E0201 when accessed.
-generated-members=objects,DoesNotExist,_meta
+generated-members=objects,DoesNotExist,_meta,id
 
 
 [VARIABLES]
