--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 BeautifulSoup==3.1.0.1
 Django==1.2.3
-Fabric==0.9.3
 Markdown==2.0.3
 MySQL-python==1.2.3
 PIL==1.1.7
 boto==2.0b3
 django-tagging==0.3.1
 easy-thumbnails==1.0-alpha-8
+-e git+https://github.com/bitprophet/fabric.git#egg=fabric
 -e git+http://github.com/django-extensions/django-extensions.git#egg=django_extensions
 -e hg+http://code.welldev.org/django-storages/@3602d345b998#egg=django-storages
 -e git+http://github.com/facebook/python-sdk.git#egg=facebook
