rebranded team language with communities [completed: 594]

--- a/hooks/pylint.ini
+++ b/hooks/pylint.ini
@@ -159,7 +159,7 @@ zope=no
 
 # List of members which are set dynamically and missed by pylint inference
 # system, and so shouldn't trigger E0201 when accessed.
-generated-members=objects,DoesNotExist,_meta,id
+generated-members=objects,DoesNotExist,_meta,id,base_fields
 
 
 [VARIABLES]
