--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ easy-thumbnails==1.0-alpha-8
 -e git+http://github.com/facebook/python-sdk.git#egg=facebook
 -e git+https://github.com/ojii/django-admin-filters.git#egg=django-admin-filters
 -e git+https://github.com/ericflo/django-threadedcomments.git#egg=django-threadedcomments
+-e git+https://github.com/eldarion/brabeion.git#egg=brabeion
 html5lib==0.90
 pisa==3.0.33
 python-memcached==1.45
