updated the comments framework to use threadedcomments instead [completed: 635]

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ easy-thumbnails==1.0-alpha-8
 -e hg+http://code.welldev.org/django-storages/#egg=django-storages
 -e git+http://github.com/facebook/python-sdk.git#egg=facebook
 -e git+https://github.com/ojii/django-admin-filters.git#egg=django-admin-filters
+-e git+https://github.com/ericflo/django-threadedcomments.git#egg=django-threadedcomments
 html5lib==0.90
 pisa==3.0.33
 python-memcached==1.45
