--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==1.2.4
 Markdown==2.0.3
 MySQL-python==1.2.3
 PIL==1.1.7
+Sphinx==1.0.7
 boto==2.0b3
 django-tagging==0.3.1
 easy-thumbnails==1.0-alpha-8
