removing all repower references with the exception of the fabfile

--- a/fabfile/server_config_files/uwsgi.conf
+++ b/fabfile/server_config_files/uwsgi.conf
@@ -1,6 +1,6 @@
 # file: /etc/init/uwsgi.conf
-author "Repower at Home Dev Team"
-description "uWSGI server. Huzzah"
+author "Repower at Home Contributors"
+description "uWSGI server. Huzzah."
 
 start on (net-device-up
           and local-filesystems
